# haskell-hws

hw1/: Task2Test.hs  hw1.cabal  work.py
hw1/.stack-work/: stack.sqlite3
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-3eDLLCf1MFHCHi2nKZPYaX/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-3eDLLCf1MFHCHi2nKZPYaX/Block2/: Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-3eDLLCf1MFHCHi2nKZPYaX/Block3/: Task1.hi  Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-4lS1WIFNRAW6mnmBP1Hd5r/Block1/: Task1.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-4lS1WIFNRAW6mnmBP1Hd5r/Block3/: Task1.hi  Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-6ykl3NZhYgeF2dqXlSBmAW/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-6ykl3NZhYgeF2dqXlSBmAW/Block2/: Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-6ykl3NZhYgeF2dqXlSBmAW/Block3/: Task1.hi  Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-7FWYRGLs4yeBm9Mw4Dr4JR/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-CDZt5O38W3x8hGIoTQKA9h/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-CDZt5O38W3x8hGIoTQKA9h/Block2/: Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-CDZt5O38W3x8hGIoTQKA9h/Block3/: Task1.hi  Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-Ctvp80kH20Y47HSuppPeEs/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-Ctvp80kH20Y47HSuppPeEs/Block2/: Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.0.0.0-Ctvp80kH20Y47HSuppPeEs/Block3/: Task1.hi  Task2.hi
hw1/.stack-work/install/beb12dd3/lib/x86_64-windows-ghc-8.8.3/hw1-0.1.0.0-KcFq8WJCBG2k5B4n6ymJj/Block1/: Task1.hi  Task2.hi  Task3.hi
hw1/.stack-work/install/beb12dd3/pkgdb/: hw1-0.0.0.0-4lS1WIFNRAW6mnmBP1Hd5r.conf  package.cache
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/test/: Main.hs  Task1Test.hs  Task2Test.hs  Task3Test.hs  Task4Test.hs  Task5Test.hs  Task6Test.hs  Task7Test.hs
hw2/: README.md  hw2.cabal
hw2/test/: Main.hs  Task1Test.hs  Task4Test.hs  Task5Test.hs  Task6Test.hs  Task7Test.hs  Task8Test.hs
hw3/: .gitignore  README.md  hw3.cabal
hw3/app/: AppBuilder.hs
hw3/src/: FileManager.hs
hw3/test/: MainTest.hs  TaskTest.hs
hw4/: hw4.cabal  stack.yaml
hw4/bench/: GeomBench.hs  MainBench.hs  MonteKarloBench.hs
hw4/src/: GeomTaskFast.hs  GeomTaskNaive.hs  MonteKarloTask.hs
hw4/test/: GeomTest.hs  MainTest.hs
