name:                hw3
version:             0.0.0.0
synopsis:            hw3
description:    Please see the README on GitHub at <https://github.com/githubuser/fpHw3#readme>

homepage:            https://github.com/githubuser/fpHw3#readme
bug-reports:         https://github.com/githubuser/fpHw3/issues
license:             BSD3
license-file:        LICENSE
author:              Dmitriy Gnatyuk
maintainer:          ima2ima3go9@gmail.com
copyright:           2020 Dmitriy Gnatyuk

category:            Func
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     FileManager
  default-extensions:  InstanceSigs
  build-depends:       base >= 4.9 && < 5, mtl, directory, filepath
  default-language:    Haskell2010

executable hw3-exe
  hs-source-dirs:      app
  main-is:             AppBuilder.hs
  build-depends:       base >= 4.9 && < 5, mtl, directory, filepath, exceptions
  default-extensions:  InstanceSigs, ScopedTypeVariables
  build-depends:       base, hw3, ghc
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             MainTest.hs
  other-modules:       TaskTest
  default-extensions:  InstanceSigs, ScopedTypeVariables
  build-depends:       base, hw3, hspec, tasty-hspec, HUnit, tasty, hedgehog, tasty-hedgehog, mtl, directory, filepath, containers, bytestring
  default-language:    Haskell2010