name:                hw4
version:             0.0.0.0
synopsis:            hw4
description:    Please see the README on GitHub at <https://github.com/githubuser/fpHw4#readme>

homepage:            https://github.com/githubuser/fpHw4#readme
bug-reports:         https://github.com/githubuser/fpHw4/issues
license:             BSD3
license-file:        LICENSE
author:              Dmitriy Gnatyuk
maintainer:          ima2ima3go9@gmail.com
copyright:           2020 Dmitriy Gnatyuk

category:            Func
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     GeomTaskNaive, GeomTaskFast, MonteKarloTask
  default-extensions:  InstanceSigs
  build-depends:       base >= 4.9 && < 5, deepseq, microlens, directory, monad-par-extras, abstract-par, monad-par, random
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTest.hs
  other-modules:       GeomTest
  default-extensions:  InstanceSigs
  build-depends:       base, hw4, hspec, tasty-hspec, HUnit, tasty, hedgehog, tasty-hedgehog
  default-language:    Haskell2010

benchmark hw4-benchmark
  type: exitcode-stdio-1.0
  main-is: MainBench.hs
  other-modules:
      GeomBench, MonteKarloBench
  hs-source-dirs:
      bench
  ghc-options: -threaded -rtsopts -with-rtsopts=-N8 -eventlog -Wall
  build-depends: base >=4.9 && <5, deepseq, hw4, criterion
  default-language: Haskell2010